Major overhaul of testing

--- a/gui/rust/Cargo.toml
+++ b/gui/rust/Cargo.toml
@@ -12,6 +12,11 @@ decktricks = { path = "../.." }
 
 [dev-dependencies]
 wait-timeout = "0.2.0"
+ctor = "0.2"
 
 [profile.release]
 lto = true
+
+[[bin]]
+name = "gui-tool"
+path = "src/bin/gui_tool.rs"
