--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -1,6 +1,6 @@
 name: Test/Build
 
-# TODO: also run cargo clippy
+# TODO: also run cargo clippy?
 
 on:
   push:
@@ -24,7 +24,6 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run CLI Tests
         run: cargo test
-        # TODO: package CLI into separate tar here
 
   cli_test_release:
     runs-on: ubuntu-latest
@@ -37,9 +36,34 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run CLI Tests (Release)
         run: cargo test --release
+        # TODO: package CLI into separate tar here
+
+  gui_test:
+    runs-on: ubuntu-latest
+    container:
+      image: gleesus/decktricks
+
+    steps:
+      - name: Preserve $HOME set in the container
+        run: echo HOME=/root >> "$GITHUB_ENV"
+      - uses: actions/checkout@v4
+      - name: Run GUI Tests
+        run: cd gui/rust && cargo test
+
+  gui_test_release:
+    runs-on: ubuntu-latest
+    container:
+      image: gleesus/decktricks
+
+    steps:
+      - name: Preserve $HOME set in the container
+        run: echo HOME=/root >> "$GITHUB_ENV"
+      - uses: actions/checkout@v4
+      - name: Run GUI Tests (Release)
+        run: cd gui/rust && cargo test --release
 
   # This tests only some basic GUI functionality
-  gui_build_and_test:
+  gui_build:
     runs-on: ubuntu-latest
     container:
       image: gleesus/decktricks
@@ -57,7 +81,11 @@ jobs:
       - run: ./ci_scripts/cli.sh
       - run: ./ci_scripts/gui.sh
 
+      - name: Verify GUI tests pass before building
+        run: cd gui/rust && cargo test --release
+
       - run: ./ci_scripts/compress.sh
+
       - name: Create tarball checksum file
         run: |
           cd ./build
@@ -109,9 +137,11 @@ jobs:
   update_latest_branch:
     if: github.event_name == 'push'
     needs:
-      - gui_build_and_test
+      - gui_build
       - cli_test
       - cli_test_release
+      - gui_test
+      - gui_test_release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
