Update dockerfile to include debug exports

--- a/misc/act-docker/Dockerfile
+++ b/misc/act-docker/Dockerfile
@@ -1,9 +1,10 @@
 FROM archlinux:base-devel AS base
 ENV CI=true
 ENV GODOT4_BIN=/usr/bin/godot
-ARG GODOT_RELEASE=4.4.1.stable
-ENV GODOT_RELEASE=${GODOT_RELEASE}
-RUN pacman -Syu --noconfirm git flatpak fontconfig p7zip rustup vim nodejs
+ARG DECKTRICKS_GODOT_VERSION=4.4.1.stable
+ENV DECKTRICKS_GODOT_VERSION=${DECKTRICKS_GODOT_VERSION}
+RUN pacman -Syu --noconfirm git flatpak fontconfig p7zip rustup vim nodejs godot
+RUN pacman -R --noconfirm godot
 RUN rustup default stable
 #RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable
 #RUN ln -sf /root/.cargo/bin/cargo /usr/bin/cargo
@@ -13,15 +14,17 @@ RUN rustup default stable
 #       because we need 4.4 to stop a terrible Linux bug in Godot,
 #       and download times from tuxfamily are quite slow.
 # TODO: Switch to fetching from github once 4.4 is officially released
-RUN mkdir -p /root/.local/share/godot/export_templates/$GODOT_RELEASE/
+RUN mkdir -p /root/.local/share/godot/export_templates/$DECKTRICKS_GODOT_VERSION/
 RUN mkdir -p /tmp/godot_extraction
-COPY godot_binary.7z linux_release.7z /tmp/godot_extraction/
+COPY godot_binary.7z linux_release.7z linux_debug.7z /tmp/godot_extraction/
 WORKDIR /tmp/godot_extraction
 RUN 7z x godot_binary.7z 
 RUN 7z x linux_release.7z
+RUN 7z x linux_debug.7z
 RUN cp godot /usr/bin/godot
-WORKDIR /root/.local/share/godot/export_templates/${GODOT_RELEASE}/
+WORKDIR /root/.local/share/godot/export_templates/${DECKTRICKS_GODOT_VERSION}/
 RUN cp /tmp/godot_extraction/linux_release.x86_64 linux_release.x86_64
+RUN cp /tmp/godot_extraction/linux_debug.x86_64 linux_debug.x86_64
 WORKDIR /
 RUN rm -r /tmp/godot_extraction
 # }}}
