--- a/gui/rust/Cargo.toml
+++ b/gui/rust/Cargo.toml
@@ -13,6 +13,7 @@ decktricks = { path = "../.." }
 [dev-dependencies]
 wait-timeout = "0.2.0"
 ctor = "0.2"
+tempfile = "3"
 
 [profile.release]
 lto = true
